# src/routes/index.ts
@@ -10,21 +10,25 @@ import notificationsRouter from './notifications';
 import profileRouter from './profile';
 import pusherRouter from './pusher';
 import sessionRouter from './session';
+import { subscriptionRouter } from './subscription';
 import tweetRouter from './tweet';
+import webhookRouter from './webhook';
 
-const router = new Hono();
+const router = new Hono()
+  .route('/auth', authRouter)
+  .route('/session', sessionRouter)
+  .route('/subscription', subscriptionRouter)
+  .route('/profile', profileRouter)
+  .route('/network', networkRouter)
+  .route('/tweet', tweetRouter)
+  .route('/like', likeRouter)
+  .route('/comment', commentRouter)
+  .route('/feed', feedRouter)
+  .route('/bookmark', bookmarkRouter)
+  .route('/notification', notificationsRouter)
+  .route('/docs', docsRouter)
+  .route('/webhook', webhookRouter)
+  .route('/pusher', pusherRouter);
 
-router.route('/auth', authRouter);
-router.route('/session', sessionRouter);
-router.route('/profile', profileRouter);
-router.route('/network', networkRouter);
-router.route('/tweet', tweetRouter);
-router.route('/like', likeRouter);
-router.route('/comment', commentRouter);
-router.route('/feed', feedRouter);
-router.route('/bookmark', bookmarkRouter);
-router.route('/notification', notificationsRouter);
-router.route('/docs', docsRouter);
-router.route('/pusher', pusherRouter);
-
+export type AppType = typeof router;
 export default router;
